--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 <div class="hidden md:flex items-center space-x-8">
                     <a href="#" class="text-sm font-medium hover:text-white transition-colors">Series</a>
                     <a href="#" class="text-sm font-medium hover:text-white transition-colors">Topics</a>
-                    <a href="#" class="text-sm font-medium hover:text-white transition-colors">Pathways</a>
+                    <a href="path.html" class="text-sm font-medium hover:text-white transition-colors">Pathways</a>
                     <a href="#" class="text-sm font-medium hover:text-white transition-colors">Forum</a>
                 </div>
 
